# RAG-against-the-machine

./: .Makefile.swp  .gitignore  .venv  Makefile  README.md  convert_json.py  fix_json.py  pyproject.toml  requeriments.txt  run_moulinette.py  student.py
data/: data.json  dataset_docs_public.json
data/processed/: config.json
data/search_results/outputs/: dataset_code_public.json  dataset_docs_public.json
filetype_scanner/: .cp_extensions.py.swp  README.md  __main__.py  allowed_extensions.py  cp_extensions.py  get_types_path.py
src/: .ragcli.py.swp  __main__.py  constant.py  ragcli.py  test.py
src/evaluate/: func_eval.py
src/generator/: generator_model.py
src/ingestion/: ingest_step.py  ingestservice.py  processor.py
src/parse/: check_repit.py  configmanager.py  models.py
src/retrieval/: retrieval_model.py
src/search/: searchmodel.py
