[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "RAG system for vLLM repository"
requires-python = ">=3.10"
dependencies = [
    "bm25s",
    "pydantic",
    "fire",
    "tqdm",
    "torch",
    "transformers",
    "accelerate",
    "chromadb",
    "sentence_transformers"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
]

[tool.mypy]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true