[project]
name = "rag-against-the-machine"
version = "0.1.0"
description = "RAG system for vLLM repository"
requires-python = ">=3.10"
dependencies = [
    "bm25s",
    "pydantic",
    "fire",
    "tqdm",
    "torch",
    "transformers",
    "accelerate",
    "chromadb",
    "sentence_transformers",
    "flake8",
    "mypy",
]

[tool.mypy]
files = ["src"]
explicit_package_bases = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
